# turtlebot3_AIRL_Project

./: .gitignore  LICENSE  README.md  requirements.txt
ros2_irl_ws/src/tb3_robot/: CMakeLists.txt  message_vec.proto  tb3_robot.cpp
ros2_irl_ws/src/tb3_robot/config/: default_rviz.rviz
ros2_irl_ws/src/tb3_robot_bringup/launch/: provide_map.launch.py
ros2_irl_ws/tb3_robot/: CMakeLists.txt  package.xml  proto_gen.sh  tb3_robot.cpp  turtlebot3Robot.bckp2
ros2_irl_ws/tb3_robot/config/: my_map.pgm  my_map.yaml  provide_map.rviz  slam_config.yaml
ros2_irl_ws/tb3_robot_bringup/: CMakeLists.txt  package.xml
ros2_irl_ws/tb3_robot_bringup/launch/: tb3_mapping.launch.py  tb3_run.launch.py
turtlebot3_webots_project/3d files/: hidden_target_ball.dae  scale_dae.py  target_ball.dae
turtlebot3_webots_project/3d files/scaled/aws_robomaker_warehouse_Bucket_01/meshes/: aws_robomaker_warehouse_Bucket_01_collision.dae
turtlebot3_webots_project/3d files/scaled/aws_robomaker_warehouse_ClutteringA_01/meshes/: aws_robomaker_warehouse_ClutteringA_01_collision.dae
turtlebot3_webots_project/3d files/scaled/aws_robomaker_warehouse_ClutteringC_01/meshes/: aws_robomaker_warehouse_ClutteringC_01_collision.dae
turtlebot3_webots_project/3d files/scaled/aws_robomaker_warehouse_ClutteringD_01/meshes/: aws_robomaker_warehouse_ClutteringD_01_collision.dae
turtlebot3_webots_project/3d files/scaled/aws_robomaker_warehouse_DeskC_01/meshes/: aws_robomaker_warehouse_DeskC_01_collision.dae
turtlebot3_webots_project/3d files/scaled/aws_robomaker_warehouse_GroundB_01/meshes/: aws_robomaker_warehouse_GroundB_01_collision.dae
turtlebot3_webots_project/3d files/scaled/aws_robomaker_warehouse_Lamp_01/meshes/: aws_robomaker_warehouse_Lamp_01_collision.dae
turtlebot3_webots_project/3d files/scaled/aws_robomaker_warehouse_PalletJackB_01/meshes/: aws_robomaker_warehouse_PalletJackB_01_collision.dae
turtlebot3_webots_project/3d files/scaled/aws_robomaker_warehouse_RoofB_01/meshes/: aws_robomaker_warehouse_RoofB_01_collision.dae
turtlebot3_webots_project/3d files/scaled/aws_robomaker_warehouse_ShelfD_01/meshes/: aws_robomaker_warehouse_ShelfD_01_collision.dae
turtlebot3_webots_project/3d files/scaled/aws_robomaker_warehouse_ShelfE_01/meshes/: aws_robomaker_warehouse_ShelfE_01_collision.dae
turtlebot3_webots_project/3d files/scaled/aws_robomaker_warehouse_ShelfF_01/meshes/: aws_robomaker_warehouse_ShelfF_01_collision.dae
turtlebot3_webots_project/3d files/scaled/aws_robomaker_warehouse_TrashCanC_01/meshes/: aws_robomaker_warehouse_TrashCanC_01_collision.dae
turtlebot3_webots_project/3d files/scaled/aws_robomaker_warehouse_WallB_01/meshes/: aws_robomaker_warehouse_WallB_01_collision.dae
turtlebot3_webots_project/controllers/Agent/: Agent.bckp  Agent.py  bc_model.pth  clipped_gauss_chainer.py  clipped_gauss_test.py  demonstration_tuning.ipynb  expert_traj_convert.py  pendulum_rl_test.py  pid_traj_visualization.ipynb  proto_gen.sh  scenario_list.npz  scenario_list.py
turtlebot3_webots_project/controllers/Agent/config/: airl.yaml  reptile_rl_ppo_gaussian.yaml  rl_ppo_clippedgaussian.yaml  rl_ppo_gaussian.yaml  rl_sac.yaml
turtlebot3_webots_project/controllers/Agent/goal_traj/: goal_traj_1.npz  goal_traj_2.npz  goal_traj_3.npz  goal_traj_4.npz  goal_traj_5.npz  goal_traj_6.npz  goal_traj_7.npz  goal_traj_8.npz
turtlebot3_webots_project/protos/: RobotisLds01.proto  RpLidarA2.proto  hidden_target_ball.proto
turtlebot3_webots_project/worlds/: .Amazon_warehouse_world.wbproj  .Amazon_warehouse_world_0_375.wbproj  .Amazon_warehouse_world_0_375_fix.wbproj  .BasicEnv.wbproj  .circle_world.wbproj  Amazon_warehouse_world_0_375_fix.wbt  BasicEnv.wbt  circle_world.wbt
(+16 files in other folders)
